поправил электрические карточки на мобильнике

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <source media="(min-width: 768px) and (max-width: 1023px)"
                     srcset="images/dragonia-m.webp 1x, images/dragonia-m@2x.webp 2x" type="image/webp">
                 <img src="images/dragonia-d.webp" srcset="images/dragonia-d@2x.webp 2x"
-                    alt="Interfejs gry Lizaro Casino" loading="lazy">
+                    alt="Interfejs gry Dragonia Casino" loading="lazy">
             </picture>
             <div class="container">
                 <div class="hero__content">
@@ -1278,7 +1278,7 @@
         <footer class="footer">
             <div class="container footer__container">
                 <div class="footer__content">
-                    <a href="#" class="footer__logo" aria-label="Lizaro Casino – 18+">
+                    <a href="#" class="footer__logo" aria-label="Dragonia Casino – 18+">
                         <svg class="footer__icon" width="40" height="41">
                             <use xlink:href="images/sprite.svg#icon-18+"></use>
                         </svg>
