--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
 
                     <div class="review__card">
                         <div class="review__header">
-                            <img src="/images/avatar-auto.webp" alt="avatar" class="review__avatar">
+                            <img src="images/avatar-auto.webp" alt="avatar" class="review__avatar">
                             <div>
                                 <div class="review__name">Marco_88</div>
                                 <div class="review__rating">★★★★ 4/5</div>
@@ -981,7 +981,7 @@
 
                     <div class="review__card">
                         <div class="review__header">
-                            <img src="/images/avatar-emmo.webp" alt="avatar" class="review__avatar">
+                            <img src="images/avatar-emmo.webp" alt="avatar" class="review__avatar">
                             <div>
                                 <div class="review__name">Giulia_S</div>
                                 <div class="review__rating">★★★★★ 5/5</div>
@@ -995,7 +995,7 @@
 
                     <div class="review__card">
                         <div class="review__header">
-                            <img src="/images/avatar-mult.webp" alt="avatar" class="review__avatar">
+                            <img src="images/avatar-mult.webp" alt="avatar" class="review__avatar">
                             <div>
                                 <div class="review__name">LucaTrading90</div>
                                 <div class="review__rating">★★★★ 4/5</div>
@@ -1009,7 +1009,7 @@
 
                     <div class="review__card">
                         <div class="review__header">
-                            <img src="/images/avatar-girl.webp" alt="avatar" class="review__avatar">
+                            <img src="images/avatar-girl.webp" alt="avatar" class="review__avatar">
                             <div>
                                 <div class="review__name">Alessanda</div>
                                 <div class="review__rating">★★★★★ 5/5</div>
@@ -1023,7 +1023,7 @@
 
                     <div class="review__card">
                         <div class="review__header">
-                            <img src="/images/avatar-girl2.webp" alt="avatar" class="review__avatar">
+                            <img src="images/avatar-girl2.webp" alt="avatar" class="review__avatar">
                             <div>
                                 <div class="review__name">Vale77</div>
                                 <div class="review__rating">★★★★ 4/5</div>
