поправил блок геймификации

--- a/index.html
+++ b/index.html
@@ -298,6 +298,85 @@
 
     <div class="divider"></div>
 
+    <section class="gamification">
+        <div class="container">
+            <div class="gamification__content">
+                <h2 class="gamification__title">Gamification e Bonus Crab</h2>
+                <p class="gamification__text">
+                    Dragonia casino eleva l'esperienza utente attraverso un sistema di gamification integrato che premia
+                    la fedeltà e l'attività costante.
+                </p>
+
+                <div class="gamification__cards-wrap">
+                    <div class="gamification__cards">
+
+                        <a href="{{link}}" class="feature-card">
+                            <div class="feature-card__media">
+                                <img src="images/game-card-1.webp" alt="" class="feature-card__image">
+                            </div>
+                            <div class="feature-card__content">
+                                <h3 class="feature-card__title">Bonus Crab</h3>
+                                <p class="feature-card__desc">
+                                    Claw Machine interattiva che trasforma i depositi giornalieri in premi immediati.
+                                </p>
+                            </div>
+                        </a>
+
+                        <a href="{{link}}" class="feature-card">
+                            <div class="feature-card__media">
+                                <img src="images/game-card-2.webp" alt="" class="feature-card__image">
+                            </div>
+                            <div class="feature-card__content">
+                                <h3 class="feature-card__title">Negozio</h3>
+                                <p class="feature-card__desc">
+                                    Scambia Coins per bonus cash, free bets, giri gratuiti e tentativi extra.
+                                </p>
+                            </div>
+                        </a>
+
+                        <a href="{{link}}" class="feature-card">
+                            <div class="feature-card__media">
+                                <img src="images/game-card-3.webp" alt="" class="feature-card__image">
+                            </div>
+                            <div class="feature-card__content">
+                                <h3 class="feature-card__title">Tornei</h3>
+                                <p class="feature-card__desc">
+                                    Competizioni regolari con classifiche basate sulle vincite e moltiplicatori.
+                                </p>
+                            </div>
+                        </a>
+
+                        <a href="{{link}}" class="feature-card">
+                            <div class="feature-card__media">
+                                <img src="images/game-card-4.webp" alt="" class="feature-card__image">
+                            </div>
+                            <div class="feature-card__content">
+                                <h3 class="feature-card__title">Sfide Settimanali</h3>
+                                <p class="feature-card__desc">
+                                    Obiettivi che sbloccano Coins extra completando missioni specifiche.
+                                </p>
+                            </div>
+                        </a>
+
+                        <a href="{{link}}" class="feature-card">
+                            <div class="feature-card__media">
+                                <img src="images/game-card-5.webp" alt="" class="feature-card__image">
+                            </div>
+                            <div class="feature-card__content">
+                                <h3 class="feature-card__title">Livelli VIP</h3>
+                                <p class="feature-card__desc">
+                                    Cashback maggiorato, limiti superiori e account manager personale.
+                                </p>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="divider"></div>
 
     <section class="features">
         <div class="container">
@@ -837,38 +916,7 @@
 
     <div class="divider"></div>
 
-    <section class="gamification">
-        <div class="container">
-            <div class="gamification__content">
-                <h2 class="gamification__title">Gamification e Bonus Crab</h2>
-                <p class="gamification__text">Dragonia casino eleva l'esperienza utente attraverso un sistema di
-                    gamification integrato che premia la fedeltà e l'attività costante. Non si tratta solo di girare
-                    i rulli, ma di avanzare in un percorso che offre ricompense tangibili.</p>
 
-                <p class="gamification__list-title">Elementi chiave della gamification includono:</p>
-
-                <ul class="content-list">
-                    <li class="content-list__item"><strong>Bonus Crab: </strong>Una vera "Claw Machine" interattiva.
-                        Ogni primo deposito giornaliero di almeno 10 € garantisce un tentativo. Afferrare un pupazzo
-                        converte il premio in Coins, bonus cash o giri gratis</li>
-                    <li class="content-list__item"><strong>Negozio (Shop): </strong>I giocatori accumulano Coins
-                        (monete) scommettendo o depositando (5% del deposito diventa Coins). Queste monete possono
-                        essere scambiate nel negozio per bonus in denaro, free bets, giri gratuiti o tentativi extra
-                        al Bonus Crab</li>
-                    <li class="content-list__item"><strong>Tornei: </strong>Competizioni regolari tra utenti con
-                        classifiche basate sulle scommesse o sui moltiplicatori di vincita</li>
-                    <li class="content-list__item"><strong>Sfide Settimanali: </strong>Obiettivi specifici (es. "fai
-                        100 spin su questa slot") che, una volta completati, sbloccano ulteriori Coins</li>
-                    <li class="content-list__item"><strong>Livelli VIP: </strong>Un sistema a 5 livelli che sblocca
-                        vantaggi crescenti, come cashback maggiorati, limiti di prelievo più alti e un account
-                        manager personale</li>
-
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <div class="divider"></div>
 
     <section class="payment">
         <div class="container">
