--- a/index.html
+++ b/index.html
@@ -317,7 +317,9 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Bonus Crab</h3>
                                 <p class="feature-card__desc">
-                                    Claw Machine interattiva che trasforma i depositi giornalieri in premi immediati.
+                                    Una vera "Claw Machine" interattiva. Ogni primo deposito giornaliero di almeno 10 €
+                                    garantisce un tentativo. Afferrare un pupazzo converte il premio in Coins, bonus
+                                    cash o giri gratis
                                 </p>
                             </div>
                         </a>
@@ -329,7 +331,9 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Negozio</h3>
                                 <p class="feature-card__desc">
-                                    Scambia Coins per bonus cash, free bets, giri gratuiti e tentativi extra.
+                                    I giocatori accumulano Coins (monete) scommettendo o depositando (5% del deposito
+                                    diventa Coins). Queste monete possono essere scambiate nel negozio per bonus in
+                                    denaro, free bets, giri gratuiti o tentativi extra al Bonus Crab
                                 </p>
                             </div>
                         </a>
@@ -341,7 +345,8 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Tornei</h3>
                                 <p class="feature-card__desc">
-                                    Competizioni regolari con classifiche basate sulle vincite e moltiplicatori.
+                                    Competizioni regolari tra utenti con classifiche basate sulle scommesse o sui
+                                    moltiplicatori di vincita
                                 </p>
                             </div>
                         </a>
@@ -353,7 +358,8 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Sfide Settimanali</h3>
                                 <p class="feature-card__desc">
-                                    Obiettivi che sbloccano Coins extra completando missioni specifiche.
+                                    Obiettivi specifici (es. "fai 100 spin su questa slot") che, una volta completati,
+                                    sbloccano ulteriori Coins
                                 </p>
                             </div>
                         </a>
@@ -365,7 +371,8 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Livelli VIP</h3>
                                 <p class="feature-card__desc">
-                                    Cashback maggiorato, limiti superiori e account manager personale.
+                                    Un sistema a 5 livelli che sblocca vantaggi crescenti, come cashback maggiorati,
+                                    limiti di prelievo più alti e un account manager personale
                                 </p>
                             </div>
                         </a>
