--- a/index.html
+++ b/index.html
@@ -304,8 +304,13 @@
                 <h2 class="gamification__title">Gamification e Bonus Crab</h2>
                 <p class="gamification__text">
                     Dragonia casino eleva l'esperienza utente attraverso un sistema di gamification integrato che premia
-                    la fedeltà e l'attività costante.
+                    la fedeltà e l'attività costante. Non si tratta solo di girare i rulli, ma di avanzare in un
+                    percorso che offre ricompense tangibili.
                 </p>
+
+                <h3 class="gamification__subtitle">
+                    Elementi chiave della gamification includono:
+                </h3>
 
                 <div class="gamification__cards-wrap">
                     <div class="gamification__cards">
@@ -317,7 +322,8 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Bonus Crab</h3>
                                 <p class="feature-card__desc">
-                                    Una vera "Claw Machine" interattiva. Ogni primo deposito giornaliero di almeno 10 €
+                                    Una vera "Claw Machine" interattiva. Ogni primo deposito giornaliero di almeno
+                                    10 €
                                     garantisce un tentativo. Afferrare un pupazzo converte il premio in Coins, bonus
                                     cash o giri gratis
                                 </p>
@@ -331,7 +337,8 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Negozio</h3>
                                 <p class="feature-card__desc">
-                                    I giocatori accumulano Coins (monete) scommettendo o depositando (5% del deposito
+                                    I giocatori accumulano Coins (monete) scommettendo o depositando (5% del
+                                    deposito
                                     diventa Coins). Queste monete possono essere scambiate nel negozio per bonus in
                                     denaro, free bets, giri gratuiti o tentativi extra al Bonus Crab
                                 </p>
@@ -358,7 +365,8 @@
                             <div class="feature-card__content">
                                 <h3 class="feature-card__title">Sfide Settimanali</h3>
                                 <p class="feature-card__desc">
-                                    Obiettivi specifici (es. "fai 100 spin su questa slot") che, una volta completati,
+                                    Obiettivi specifici (es. "fai 100 spin su questa slot") che, una volta
+                                    completati,
                                     sbloccano ulteriori Coins
                                 </p>
                             </div>
