--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </p>
 
                 <h3 class="gamification__subtitle">
-                    Elementi chiave della gamification includono:
+                    Elementi chiave della gamification
                 </h3>
 
                 <div class="gamification__cards-wrap">
