--- a/index.html
+++ b/index.html
@@ -387,7 +387,11 @@
 
                     </div>
                 </div>
+
+                <a class="btn btn--secondary" href="{{link}}">Scopri di più</a>
             </div>
+
+
         </div>
     </section>
 
